--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
     "gatsby-plugin-manifest": "^2.4.5",
     "gatsby-plugin-offline": "^3.2.3",
     "gatsby-plugin-react-helmet": "^3.3.1",
+    "gatsby-plugin-sass": "^2.3.2",
     "gatsby-plugin-sharp": "^2.6.4",
+    "gatsby-plugin-smoothscroll": "^1.1.0",
     "gatsby-source-filesystem": "^2.3.4",
     "gatsby-transformer-sharp": "^2.5.2",
+    "gsap": "^3.2.6",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.0.0"
+    "react-helmet": "^6.0.0",
+    "react-icons": "^3.10.0",
+    "smooth-scrollbar": "^8.5.2"
   },
   "devDependencies": {
     "prettier": "2.0.5"
