--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
     "react-icons": "^3.10.0",
+    "react-scroll": "^1.7.16",
+    "smooth-scroll": "^16.1.3",
     "smooth-scrollbar": "^8.5.2"
   },
   "devDependencies": {
