--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.3.3",
     "gatsby-plugin-sass": "^2.3.2",
+    "gatsby-plugin-scroll-reveal": "0.0.7",
     "gatsby-plugin-sharp": "^2.6.4",
     "gatsby-plugin-smoothscroll": "^1.1.0",
     "gatsby-source-filesystem": "^2.3.4",
@@ -25,6 +26,7 @@
     "react-helmet": "^6.0.0",
     "react-icons": "^3.10.0",
     "react-scroll": "^1.7.16",
+    "sal.js": "^0.7.6",
     "smooth-scroll": "^16.1.3",
     "smooth-scrollbar": "^8.5.2"
   },
