--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "babel-plugin-prismjs": "^2.0.1",
+    "babel-preset-gatsby": "^0.4.8",
     "gatsby": "^2.21.37",
     "gatsby-image": "^2.4.4",
     "gatsby-plugin-google-fonts": "^1.0.1",
@@ -16,15 +18,18 @@
     "gatsby-plugin-scroll-reveal": "0.0.7",
     "gatsby-plugin-sharp": "^2.6.4",
     "gatsby-plugin-smoothscroll": "^1.1.0",
+    "gatsby-remark-video": "^1.2.5",
     "gatsby-source-filesystem": "^2.3.4",
     "gatsby-transformer-sharp": "^2.5.2",
     "gsap": "^3.2.6",
     "node-sass": "^4.14.1",
+    "prismjs": "^1.20.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
     "react-icons": "^3.10.0",
+    "react-reveal": "^1.2.2",
     "react-scroll": "^1.7.16",
     "sal.js": "^0.7.6",
     "smooth-scroll": "^16.1.3",
