--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
     "react-icons": "^3.10.0",
+    "react-particles-js": "^3.2.1",
     "react-reveal": "^1.2.2",
     "react-scroll": "^1.7.16",
     "sal.js": "^0.7.6",
