--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "gatsby-plugin-scroll-reveal": "0.0.7",
     "gatsby-plugin-sharp": "^2.6.4",
     "gatsby-plugin-smoothscroll": "^1.1.0",
+    "gatsby-plugin-transition-link": "^1.18.0",
     "gatsby-remark-video": "^1.2.5",
     "gatsby-source-filesystem": "^2.3.4",
     "gatsby-transformer-sharp": "^2.5.2",
-    "gsap": "^3.2.6",
+    "gsap": "^3.3.2",
     "node-sass": "^4.14.1",
     "prismjs": "^1.20.0",
     "prop-types": "^15.7.2",
