--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-transformer-sharp": "^2.5.2",
     "gsap": "^3.3.2",
     "node-sass": "^4.14.1",
+    "particles.js": "^2.0.0",
     "prismjs": "^1.20.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
