--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "gatsby-source-filesystem": "^2.3.4",
     "gatsby-transformer-sharp": "^2.5.2",
     "gsap": "^3.3.2",
-    "node-sass": "^4.14.1",
     "particles.js": "^2.0.0",
     "prismjs": "^1.20.0",
     "prop-types": "^15.7.2",
@@ -36,10 +35,12 @@
     "react-scroll": "^1.7.16",
     "sal.js": "^0.7.6",
     "smooth-scroll": "^16.1.3",
-    "smooth-scrollbar": "^8.5.2"
+    "smooth-scrollbar": "^8.5.2",
+    "smoothscroll-polyfill": "^0.4.4"
   },
   "devDependencies": {
-    "prettier": "2.0.5"
+    "prettier": "2.0.5",
+    "sass": "^1.50.0"
   },
   "keywords": [
     "gatsby"
