--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "gatsby-transformer-sharp": "^2.5.2",
     "gsap": "^3.3.2",
     "particles.js": "^2.0.0",
+    "photoswipe": "^5.2.7",
+    "photoswipe-dynamic-caption-plugin": "^1.1.1",
     "prismjs": "^1.20.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -31,6 +33,7 @@
     "react-helmet": "^6.0.0",
     "react-icons": "^3.10.0",
     "react-particles-js": "^3.2.1",
+    "react-photoswipe-gallery": "^2.2.1",
     "react-reveal": "^1.2.2",
     "react-scroll": "^1.7.16",
     "sal.js": "^0.7.6",
